# helpers-python

./: .env.example  .gitignore  data.json  dealer_config_to_dealer_details.py  main.py  pyproject.toml
aws/s3/: client.py  list.py  upload.py
aws/sqs/: receive.py
aws_helpers/s3/: download.py
aws_helpers/sqs/: client.py  send.py
helpers/crud/: delete_document.py
mongo/client/: close_mongo_client.py
mongo_helpers/: README.md
mongo_helpers/CRUD/: insert_document.py  update_document.py
mongo_helpers/aggregation/: __init__.py  aggregation.py
mongo_helpers/client/: get_mongo_client.py
mongo_helpers/crud/: bulk.py  find_document.py
mongo_helpers/indexing/: indexing.py
mongo_helpers/validate/: validate_document.py
ollama_helpers/: async.py  chat.py  embeding.py  error.py  model.py
scripts/: add_odometer_data.py  typesense_data_export.py
tests/: test_insert_document.py
typesense_helpers/: __init__.py
typesense_helpers/client/: initialize.py
typesense_helpers/collection/: create.py  delete.py  export.py  import_documents.py  search.py
typesense_helpers/document/: indexing.py  search.py
utils/csv/: append.py  read.py  write.py
utils/html/: fetch_html.py  parse_html.py
utils/json/: append.py  csv.py  pandas_dataframe.py  print.py  read.py  write.py
utils/re/: validations.py
utils/selenium/: browser_console.logs.py  browser_tabs.py  browser_window.py  cookies.py  downlaod.py  html.py  screeshot.py  simulate_keyboard.py  simulate_mouse.py  user_agent.py  webdriver.py
utils/sitemap/: fetch_urls.py
utils/url/: url.py
