[tool.poetry]
name = "mongo-helpers"
version = "0.1.0"
description = ""
authors = ["Piyush Gambhir <90608533+piyush-gambhir@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.9.1"
pytest = "^8.3.3"
python-dotenv = "^1.0.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
